Differences in render passes progressive/non-progressive #33838

Closed
opened 2013-01-11 18:01:33 +01:00 by Filip Sauer · 5 comments

%%%--- Operating System, Graphics card ---
windows 7, 64 bit, NVIDIA GeForce GTX 285

- Blender version with error, and version that worked ---

2.65.8 r. 53 729, tested also in official 2.65a

- Short description of error ---

If I render separate passes with progressive and non progressive integrator I get differences. On a side note - as far as I can compare, I should get the same results with noise (mesh emitter, no background MIS, all samples in non-progressive set to 1) and same amount of passes, but still I get better result with non-progressive, but that's probably the result of differences in passes.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Just render the attached scene first with progressive and then without it and see the difference in passes. It should work with pretty much any scene with glossy and transparent shaders. I marked some of the most visible differences in the attached image.

%%%

%%%--- Operating System, Graphics card --- windows 7, 64 bit, NVIDIA GeForce GTX 285 - Blender version with error, and version that worked --- 2.65.8 r. 53 729, tested also in official 2.65a - Short description of error --- If I render separate passes with progressive and non progressive integrator I get differences. On a side note - as far as I can compare, I should get the same results with noise (mesh emitter, no background MIS, all samples in non-progressive set to 1) and same amount of passes, but still I get better result with non-progressive, but that's probably the result of differences in passes. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Just render the attached scene first with progressive and then without it and see the difference in passes. It should work with pretty much any scene with glossy and transparent shaders. I marked some of the most visible differences in the attached image. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Hi,
I experienced the same before, this is indeed interesting.
I am not exactly sure though if this is a bug, the final image converges into the same result.

The difference in the passes could be related to the different sampling techniques. What do you think Brecht? %%%

%%%Hi, I experienced the same before, this is indeed interesting. I am not exactly sure though if this is a bug, the final image converges into the same result. The difference in the passes could be related to the different sampling techniques. What do you think Brecht? %%%

%%%The difference in noise is intentional, this is because the non-progressive integrator will sample all light sources once for each AA simple, rather than picking a single light source as the progressive integrator does.

The passes are indeed wrong though, will look into a fix.%%%

%%%The difference in noise is intentional, this is because the non-progressive integrator will sample all light sources once for each AA simple, rather than picking a single light source as the progressive integrator does. The passes are indeed wrong though, will look into a fix.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33838
No description provided.