Fix #33838: light render passes for non-progressive integrator were not correct.